# ContaminedNER

./: .gitignore  README.md  configs.Makefile  plots.Makefile  pyproject.toml
configs/conll04/: conll04_clean_contaminated_asp.conf  conll04_clean_contaminated_diffusion.conf  conll04_clean_contaminated_iter.json
configs/conll04/dataset_contamination/: conll04_conta0_split0_asp.conf  conll04_conta0_split0_diffusion.conf  conll04_conta0_split0_iter.json  conll04_conta0_split1_asp.conf  conll04_conta0_split1_diffusion.conf  conll04_conta0_split1_iter.json  conll04_conta0_split2_asp.conf  conll04_conta0_split2_diffusion.conf  (+157 more)
notebooks/: experiments_contamination_analysis.ipynb  utils.py
paper_dataset_contamination/: __init__.py  experiment_watcher.py  utils.py
results/experiment_results/: ace05_split_stats.json  conll03_split_stats.json  conll04_split_stats.json  genia_split_stats.json  nyt_split_stats.json  scierc_split_stats.json
scripts/: run_experiment
scripts/analysis/: plot_dataset_contamination.py  plot_split_contamination.py  split_ratios.py  visualize_dataset_contamination.py
scripts/configs/: generate_asp_configs.py  generate_diffusion_ner_configs.py  generate_iter_configs.py  generate_iter_test_configs.py
scripts/datasets/: generate_conll03_sentlevel.py  generate_sred_fm.py  load_datasets.sh
scripts/results/: parse_diffusionner_csv_as_metrics_json.py
scripts/splits/: generate_contamination_entities.py  generate_contamination_splits.py  generate_mincut_splits.py  mincut_partitioning.py  separate_clean_contaminated_test_set.py
(+1179 files in other folders)
