[project]
name = "paper_dataset_contamination"
description = "Code for the paper on entity contamination in NER datasets"
version = "0.0.1rc1"
dependencies = [
    "with_argparse==1.0.2",
    "gdown==5.2.0",
    "matplotlib==3.10.0",
    "metis==0.2a5",
    "networkx==3.4.2",
    "scipy==1.15.1",
    "spacy==3.8.4",
    "beautifulsoup4==4.13.3",
    "transformers==4.48.3",
    "numpy==2.2.3",
    "seaborn==0.13.2",
    "pandas==2.2.3",
    "jupyter==1.1.1"
]
requires-python = ">= 3.10"
[tool.setuptools]
packages = ["paper_dataset_contamination"]
